[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/World/wealthPot.png" type="Texture" id=1]
[ext_resource path="res://Assets/World/GoldPot.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Fonts/UI-Font8.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="GoldPot" type="StaticBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 6
frame = 3

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 4, 4 )
shape = SubResource( 2 )

[node name="TownGold" type="Label" parent="."]
visible = false
margin_left = 1.0
margin_top = -2.0
margin_right = 21.0
margin_bottom = 6.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0.847059, 0.521569, 1 )
text = "50/50"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
